fix(proposal card): fix proposal variant dropdown layout on mobiles

--- a/astro_2.0/features/CreateProposal/components/GroupedSelect/GroupedSelect.module.scss
+++ b/astro_2.0/features/CreateProposal/components/GroupedSelect/GroupedSelect.module.scss
@@ -110,7 +110,11 @@
   .selectedLabel {
     > input,
     .input {
-      font-size: 16px;
+      font-size: 14px;
     }
+  }
+
+  .menu {
+    max-width: 300px;
   }
 }
